force-app/main/default/objects/Card_Meta_Data__c/Card_Meta_Data__c.object-meta.xml
<CustomObject>
    <description>Contains the section data for each card on an application</description>
    <label>Card Meta Data</label>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Card Meta Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>