force-app/main/default/objects/Card_Meta_Data__c/fields/Application_Meta_Data__c.field-meta.xml
<CustomField>
    <fullName>Application_Meta_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Card to its application</description>
    <label>Application Meta Data</label>
    <referenceTo>Application_Meta_Data__c</referenceTo>
    <relationshipLabel>Card Meta Data</relationshipLabel>
    <relationshipName>Card_Meta_Data1</relationshipName>
    <type>Lookup</type>
</CustomField>