force-app/main/default/objects/Card_Meta_Data__c/fields/CardMetaId__c.field-meta.xml
<CustomField>
    <fullName>CardMetaId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used for export purpose</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for export purpose</inlineHelpText>
    <label>CardMetaId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>