force-app/main/default/objects/Card_Meta_Data__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>//only used for dataloader</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>