force-app/main/default/objects/Card_Meta_Data__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>