force-app/main/default/objects/Card_Meta_Data__c/fields/NextActions__c.field-meta.xml
<CustomField>
    <fullName>NextActions__c</fullName>
    <label>Next Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>