force-app/main/default/objects/Card_Meta_Data__c/fields/Show_on_Initial_Load__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Initial_Load__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Initial Load</label>
    <type>Checkbox</type>
</CustomField>