force-app/main/default/objects/Card_Meta_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to separate the different type for card display.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salary Table</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
            <value>
                <fullName>Shared by children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>